--- a/module-2/task_2-1/task_2-1.html
+++ b/module-2/task_2-1/task_2-1.html
@@ -7,16 +7,18 @@
 <body>
 <script>
   /* write your code below this line  🙂 */
-  const a = 3;
-  let b = a;
-  b = 5;
-  let c = test(a,b);
+  "use strict";
+  let navn = "marius";
+  console.log(navn);
+  let Pi=3.14; 
+  
+  
 
-  function test(valueA, ValueB){
-    valueA = 12;
-    valueC = valueA + valueB;
-    return valueC;
-  }
+
+
+
+
+
 </script>
 </body>
 </html>
