--- a/module-2/task_2-2/task_2-2.html
+++ b/module-2/task_2-2/task_2-2.html
@@ -12,31 +12,31 @@
     <ol>
       <li>Where should you use constants, and where should you use variables? Can they all be constants?</li>
       <p>
-				[Replace this with you answer]
+				[constanter er brukt for verdier som ikke skal endres på, mens variabler er brukt for verdier som kan gjøres endringer på. alle kan ikke være konstanter fordi noen verdier må kunne endres av programmets verdier.]
 			</p>
       <li>How do parentheses affect the arithmetic outcome of an expression?</li>
       <p>
-				[Replace this with you answer]
+				[Parantes er brukt for å endre rekkefølgen på hvordan et uttrykk skal regnes ut. utrykket blir regnet ut fra venstre mot høyre.]
 			</p>
       <li>How do we limit floating-point numbers to a given number of decimals?</li>
       <p>
-				[Replace this with you answer]
+				[for å begrense desimaler i et flytall kan vi bruke tofixed(). denne metoden returnerer en streng som representerer tallet med antall ønsket desimaler.]
 			</p>
       <li>How can we compare two floating-point values to see if they are equal (is 12.199999 the same as 12.2)?</li>
       <p>
-				[Replace this with you answer]
+				[vi kan bruke == for å sammenligne dem. hvis man tester det i programmet får vi svaret FALSE.]
 			</p>
       <li>What do comparison operators return, and how can we check if they are FALSE or TRUE?</li>
       <p>
-				[Replace this with you answer]
+				[de returnerer en boolsk verdi (true eller false). vi kan bruke if-setninger for å sjekke om de er sanne eller falske.]
 			</p>
       <li>How does the Math.random() function work, and what can it be used for?</li>
       <p>
-				[Replace this with you answer]
+				[den generere et tilfeldig tall mellom 0 og 1. den kan brukes i spill for å generere tilfeldige hendelser.]
 			</p>
       <li>What is modulus (%), and when do we need this operator in mathematical operations?</li>
       <p>
-				[Replace this with you answer]
+				[Modulus operatoren (%) returnerer resten av en divisjon. Vi trenger denne operatoren når vi vil finne ut om et tall er delelig med et annet tall, eller når vi vil begrense et tall til et bestemt intervall.]
 			</p>
     </ol>
 		<script type="module" src="./task_2-2.mjs" defer></script>
