--- a/module-3/task_3-1/task_3-1.html
+++ b/module-3/task_3-1/task_3-1.html
@@ -11,12 +11,14 @@
     </div>
     <ol>
       <li>Discuss the behavior of part 1, What happens when the wake-up time is not 7 and what happens when it is exactly 7?</li>
-      <p>[Replace this with you answer]</p>
+      <p>[If the wake-up time is not 7, the output will indicate that the user has to walk to school or take the car. If it is exactly 7, the output will indicate that the user can take the bus.]</p>
       <li>Same as question #1. How ever the answer should now be different. Discuss the behavior of part 2, What happens when the wake-up time is not 7 and what happens when it is exactly 7?</li>
-      <p>[Replace this with you answer]</p>
+      <p>[If the wake-up time is not 7, the output will indicate that the user has to take the car. If it is exactly 7, the output will indicate that the user can take the bus.]</p>
       <li>Discuss the behavior of part 3, what happens when wake time is less than 7 or greater than 8?</li>
-      <p>[Replace this with you answer]</p>
+      <p>[If the wake-up time is less than 7, the output will indicate that the user has to take the car. If it is greater than 8, the output will indicate that the user can take the train.]</p></li>
       <li>Discuss the behavior for part 4, what happens if the number is exactly 0, is zero positive or negative?</li>
+      <p>[If the number is exactly 0, the output will indicate that the number is zero. Zero is neither positive nor negative.]</p>
+   
     </ol>
     <script type="module" src="./task_3-1.mjs" defer></script>
   </body>
