--- a/module-3/task_3-2/task_3-2.html
+++ b/module-3/task_3-2/task_3-2.html
@@ -10,8 +10,23 @@
       <span id="txtOut" style="white-space: nowrap"></span>
     </div>
     <ol>
-      <li>[Write the question here, and copy this for more questions]</li>
-      <p>[Write your answer here, and copy this for more answers]</p>
+      <li>[In part 1, is it possible to solve the problem using a single for loop?]]</li>
+      <p>[No, one loop to count up and one loop to count down]<p>
+      
+      <li>[can you create a infinate loop?]</li>
+        <p>[Yes, if you put the condition outside of the targeted area]</p>
+      
+      <li>[Discuss briefly how quickly or slowly a computer might be able to compute this, considering the
+number of guesses and the time it takes. How does the program behave while it is guessing? Can
+the program perform other tasks concurrently?]</li>
+
+      <p>[Depends on what you mean by THIS, if you are talking about the assignment above it is working until its done and it depends on the targeted area]</p>
+
+      <li>[Explain the relationship between rows and columns in nested "for" loops. Can we, for instance,
+change the order, considering rows to be innermost or columns to be innermost, or does this not
+matter?]</li>
+      <p>[Yes]</p>
+
     </ol>
     <script type="module" src="./task_3-2.mjs" defer></script>
   </body>
