--- a/module-3/task_3-3/task_3-3.html
+++ b/module-3/task_3-3/task_3-3.html
@@ -10,6 +10,22 @@
       <span id="txtOut" style="white-space: nowrap"></span>
     </div>
     <ol>
+      <li>[Hva er forskjellen mellom å kalle og å opprette en funksjon]</li>
+      <p>[oprette så lager du et oppsett, når du kaller den får du oppsettet skrevet ut]</p>
+      <li>[Forklar syntaksen når det gjelder semikolon og kodeblokker]</li>
+      <p>[semikolon avslutter en setning, kodeblokker er alt inne i 
+           klammerparantesen og tilhører samme struktur]</p>
+      <li>[Hva skjer når vi prøver å lagre verdier fra en funksjon 
+           som ikke returnerer noe]</li>
+      <p>[Da får vi opp undefined i våres printOut]</p>
+      <li>[Forklar hvordan parameternavn henger sammen under kall og 
+           opprettelse av en funksjon?]</li>
+      <p>[når du oppretter så definerer du parameterene, mens når du kaller
+          sender du inn argumenter]</p>
+      <li>[]</li>
+      <p>[Write your answer here, and copy this for more answers]</p>
+      <li>[Write the question here, and copy this for more questions]</li>
+      <p>[Write your answer here, and copy this for more answers]</p>
       <li>[Write the question here, and copy this for more questions]</li>
       <p>[Write your answer here, and copy this for more answers]</p>
     </ol>
