--- a/module-3/task_3-3/task_3-3.html
+++ b/module-3/task_3-3/task_3-3.html
@@ -18,16 +18,16 @@
       <li>[Hva skjer når vi prøver å lagre verdier fra en funksjon 
            som ikke returnerer noe]</li>
       <p>[Da får vi opp undefined i våres printOut]</p>
+      <li>[Hvordan skiller vi parametere fra hverandre når vi lager en funksjon?]</li>
+      <p>[Når vi lager en funksjon så skiller vi mellom parameterne med å bruke komma inne i parantesen.]</p>
       <li>[Forklar hvordan parameternavn henger sammen under kall og 
            opprettelse av en funksjon?]</li>
       <p>[når du oppretter så definerer du parameterene, mens når du kaller
           sender du inn argumenter]</p>
-      <li>[]</li>
-      <p>[Write your answer here, and copy this for more answers]</p>
-      <li>[Write the question here, and copy this for more questions]</li>
-      <p>[Write your answer here, and copy this for more answers]</p>
-      <li>[Write the question here, and copy this for more questions]</li>
-      <p>[Write your answer here, and copy this for more answers]</p>
+      <li>[Forklar hvorfor et parameter blir udefinert når et funksjonskall mangler en parameter?]</li>
+      <p>[når det ikke er noen verdier og tilordne så vil ikke funksjonen ha noen funksjon og derfor bli udefinert.]</p>
+      <li>[Forklar hva som skjer når vi bruker rekursive funksjoner.]</li>
+      <p>[Når vi bruker rekursive funksjoner, kaller funksjonen seg selv for å løse et problem i mindre deler. Hver gang funksjonen kalles, legges det et nytt kall på kallestakken. For at rekursjon skal stoppe, må funksjonen ha en stoppbetingelse (base case). Hvis stoppbetingelsen mangler, vil funksjonen fortsette å kalle seg selv helt til programmet krasjer på grunn av for mange kall.]</p>
     </ol>
     <script type="module" src="./task_3-3.mjs" defer></script>
   </body>
