--- a/module-5/Introduction/sonic.html
+++ b/module-5/Introduction/sonic.html
@@ -19,5 +19,19 @@
   </body>
   <script defer>
 
+    const cvs = document.getElementById("cvs");
+    const ctx = cvs.getContext("2d");
+
+    const center = {x: cvs.width / 2, y: cvs.height / 2};
+
+    const sonicPath = "sonic_sprite_sheet.png";
+    const imgSonic = new Image();
+
+
+
   </script>
 </html>
+
+
+
+
